2011-05-31  Matthew Mundell <matthew.mundell@greenbone.net>

	Deal with GCC 4.6 warnings.  Thanks to Stephan Kleine for original patch.

	* misc/network.c (renice_myself): Check nice return.

	* misc/plugutils.c (plug_get_key): Remove stray variable usage left from
	Nessus times.

2011-05-31  Henri Doreau <henri.doreau@greenbone.net>

	Added a new builtin module to perform comprehensive network scanning with nmap.

	* nasl/nasl_builtin_nmap.c: New. Exports plugin_run_nmap() to NASL. This
	function calls nmap to perform network wide scanning. Results are stored
	in the knowledge base to be read and reported by an external NASL plugin.

	* nasl/CMakeLists.txt: Updated to handle nasl_builtin_nmap.c.

	* nasl/nasl_builtin_plugins.h: Updated with plugin_run_nmap prototype.

	* nasl/nasl_init.c: Added new function plugin_run_nmap to the list of
	NASL functions.

2011-05-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_init.c (libfuncs): removed registration of functions
	"shared_socket_register", "shared_socket_acquire",
	"shared_socket_release" and "shared_socket_destroy".

	* nasl/nasl_scanner_glue.c (SECRET_SOCKET_PREFIX,
	nasl_shared_socket_register, nasl_shared_socket_acquire,
	nasl_shared_socket_release, nasl_shared_socket_destroy): Removed.

	* nasl/nasl_scanner_glue.h: Removed protos accordingly.

	* misc/plugutils.c (shared_socket_register, shared_socket_acquire,
	shared_socket_release, shared_socket_destroy): Removed.

	* misc/plugutils.h: Removed protos accordingly.

2011-05-30  Michael Wiegand <michael.wiegand@greenbone.net>

	Post branch version bump.

	* CMakeLists.txt: Set version to 5.0.0.

2011-05-24  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_get_system_reports): Return status code instead of 1, as
	in other functions.  Thanks to Stephan Kleine for reporting.

2011-05-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/plugutils.c: Add support for separate control of